...

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/main_view_holder_tittle_textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent" tools:text="Road trip" android:textStyle="bold"
                app:autoSizeTextType="uniform" android:textSize="18sp" android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimary" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/view_holder_price_textView"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
